--- a/styles.css
+++ b/styles.css
@@ -115,11 +115,18 @@ nav svg {
     border-radius: 0.5rem;
     box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.216);
     margin: 1rem;
+    cursor: pointer;
 }
 
 .cta-main {
     background-color: var(--main-color);
     color: var(--secondary-color);
+}
+
+.cta-main a{
+    text-decoration: none;
+    color:var(--secondary-color);
+    cursor:pointer;
 }
 
 .cta-secondary {
@@ -185,3 +192,26 @@ nav svg {
     margin-top: 2rem;
 }
 
+@media screen and (min-width: 768px){
+    body{
+        padding: 10%;
+    }
+    .videos {
+        display: flex;
+        gap: 2rem;
+    }
+
+    .about {
+        display: flex;
+        gap: 5rem;
+        justify-content: space-between;
+    }
+
+    .about img {
+        width: 50%;
+    }
+
+    .about h2{
+        text-align: start;
+    }
+}
