--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 html,
 body {
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -15,7 +16,7 @@ body {
 }
 
 :root{
-    --main-color: #fab281;
+    --main-color: #ee81fa;
     --secondary-color: #1b1b1b;
 }
 
@@ -47,11 +48,18 @@ nav{
     justify-content: space-between;
 }
 
+nav .logo img{
+    border-radius: 10%;
+}
 nav svg {
     cursor: pointer;
     z-index: 1000;
 }
 
+.hero{
+    width: 100%;
+    height: 50%;
+}
 .links {
     position: absolute;
     background-color: white;
@@ -92,15 +100,24 @@ nav svg {
 }
 
 .selling-point {
-    margin-top: 25vh;
+    margin-top: 60vh;
+    margin-left: 35vh;
     font-family: "argonite", sans-serif;
     text-shadow: 0px 4px 12px rgba(0, 0, 0, 0.49);
     text-align: center;
+    background-color: #fff;
+    border-radius: 5%;
+    width: 600px;
+    opacity: 80%;
 }
 
+.selling-point h2 {
+    color: #000;
+}
 .selling-point h3{
     font-family: sans-serif;
     text-shadow: 0px 4px 12px rgba(0, 0, 0, 0.49);
+    color: green;
 }
 
 .ctas{
@@ -123,10 +140,14 @@ nav svg {
     color: var(--secondary-color);
 }
 
-.cta-main a{
+.ctas button a{
     text-decoration: none;
-    color:var(--secondary-color);
+    color: white;
     cursor:pointer;
+}
+
+a {
+    scroll-behavior: smooth;
 }
 
 .cta-secondary {
@@ -175,6 +196,7 @@ nav svg {
 
 .about{
     color:var(--secondary-color);
+    background-color:#c8d8f1;
 }
 
 .about h2{
@@ -190,15 +212,129 @@ nav svg {
 .about img{
     width: 100%;
     margin-top: 2rem;
+    border-radius: 5%;
 }
+
+.table_container {
+    padding: 1rem;
+    margin: 40px auto 0;
+}
+
+.table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.table thead {
+    background-color: rgb(25, 48, 95);
+}
+
+.table thead tr th{
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 0.35px;
+    color: #fff;
+    opacity: 1;
+    vertical-align: top;
+    border: 1px solid #dee2e685;
+}
+
+.table tbody tr td{
+    font-size: 20px;
+    padding: 8px;
+    letter-spacing: 0.35px;
+    font-weight: normal;
+    text-transform: uppercase;
+    background-color: #eef5f794;
+}
+
+/* ---------------------------- FOOTER -------------------------------- */
+
+footer {
+    background: #111;
+    height: auto;
+    width: 100vw;
+    font-family: "open Sans";
+    padding-top: 40px;
+    color: #fff;
+}
+
+.footer_content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.footer_content h3 {
+    font-size: 1.8rem;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 3rem;
+}
+
+.footer_content p{
+    max-width: 500px;
+    margin: 10px auto;
+    line-height: 28px;
+    font-size: 14px;
+}
+
+.socials {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 3rem 0;
+}
+
+.socials li{
+    margin: 0 10px;
+}
+
+.socials a{
+    text-decoration: none;
+    color: #fff;
+}
+
+.socials a i{
+    font-size: 2.1rem;
+    transition: color .4s ease;
+}
+
+.socials a:hover i{
+    color: aqua;
+}
+
+.footer_bottom {
+    background-color: #000;
+    width: 100vw;
+    padding: 20px 0;
+    text-align: center;
+}
+
+.footer_bottom p{
+    font-size: 14px;
+    word-spacing: 2px;
+    text-transform: capitalize;
+}
+
+.footer_bottom span{
+    text-transform: uppercase;
+    opacity: .4;
+    font-weight: 200;
+}
+
 
 @media screen and (min-width: 768px){
     body{
-        padding: 10%;
+        
     }
     .videos {
         display: flex;
         gap: 2rem;
+        justify-content: space-evenly;
     }
 
     .about {
