--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,7 @@
     box-sizing: border-box;
 }
 
-html,
-body {
+html {
     height: 100%;
     scroll-behavior: smooth;
 }
@@ -17,7 +16,7 @@ body {
 
 :root{
     --main-color: #ee81fa;
-    --secondary-color: #1b1b1b;
+    --secondary-color: #6a0991;
 }
 
                 /* to add a custom font do this down below (add the @font) */
@@ -51,6 +50,7 @@ nav{
 nav .logo img{
     border-radius: 10%;
 }
+
 nav svg {
     cursor: pointer;
     z-index: 1000;
@@ -60,6 +60,7 @@ nav svg {
     width: 100%;
     height: 50%;
 }
+
 .links {
     position: absolute;
     background-color: white;
@@ -91,7 +92,7 @@ nav svg {
 }
 
 .logo img{
-    width: 2rem;
+    width: 4rem;
 }
 
 .front-page {
@@ -100,8 +101,8 @@ nav svg {
 }
 
 .selling-point {
-    margin-top: 60vh;
-    margin-left: 35vh;
+    margin-top: 25vh;
+    margin-left: 125vh;
     font-family: "argonite", sans-serif;
     text-shadow: 0px 4px 12px rgba(0, 0, 0, 0.49);
     text-align: center;
@@ -117,7 +118,7 @@ nav svg {
 .selling-point h3{
     font-family: sans-serif;
     text-shadow: 0px 4px 12px rgba(0, 0, 0, 0.49);
-    color: green;
+    color: rgb(2, 3, 2);
 }
 
 .ctas{
@@ -195,8 +196,9 @@ a {
 }
 
 .about{
-    color:var(--secondary-color);
-    background-color:#c8d8f1;
+    color:rgb(36, 31, 54);
+    background-color:#dbd3d3;
+    height: 100vh;
 }
 
 .about h2{
@@ -211,22 +213,43 @@ a {
 
 .about img{
     width: 100%;
+    height: 70vh;
     margin-top: 2rem;
     border-radius: 5%;
 }
 
 .table_container {
     padding: 1rem;
-    margin: 40px auto 0;
+    /* margin: 40px auto 0; */
+    height: 100%;
+    width: 100%;
 }
 
+.T_heading {
+    font-size: 40px;
+    text-align: center;
+    color: #f1f1f1;
+    /* margin-bottom: 40px; */
+}
 .table {
     width: 100%;
     border-collapse: collapse;
+    border: 1px solid black;
 }
 
 .table thead {
     background-color: rgb(25, 48, 95);
+}
+
+#price {
+    background-color: #b089c0;
+    border-radius: 20%;
+    
+    margin-top: 50px;
+}
+
+#price h2{
+    padding-left: 40%;
 }
 
 .table thead tr th{
@@ -237,17 +260,51 @@ a {
     opacity: 1;
     vertical-align: top;
     border: 1px solid #dee2e685;
+    padding: 12px;
 }
 
 .table tbody tr td{
     font-size: 20px;
+    font-weight: normal;
     padding: 8px;
     letter-spacing: 0.35px;
     font-weight: normal;
     text-transform: uppercase;
     background-color: #eef5f794;
+    color: #1a1313;
+    text-align: center;
+    border: 1px solid #dee2e685;
 }
 
+/* ------------------------About Me ----------------------------------- */
+.aboutMe {
+    background-color: blueviolet;
+    height: 40%;
+}
+/* Create two equal columns that float next to each other */
+.column-2 {
+  float: left;
+  width: 45%;
+  padding: 40px;
+  padding-left:70px;
+  padding-right: 70px;
+  height: 475px;
+  margin:30px;
+  margin-right:30px;
+  margin-bottom: 70px;
+  background-color: #FEDE00;
+  line-height:2;
+}
+
+
+/* Large profile image */
+.large-profile {
+  background: url(./photos/photo_2022-12-24_02-23-45.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  
+}
 /* ---------------------------- FOOTER -------------------------------- */
 
 footer {
